// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldTextArea with default label 1`] = `
.c5 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c5 .sc-iqAbSa {
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c5 textarea {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  min-height: 6.25rem;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  resize: vertical;
  width: 100%;
}

.c5 textarea:hover {
  border-color: #C1C6CC;
}

.c5 textarea:focus,
.c5 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c2 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 500;
}

.c4 {
  min-width: 0;
}

.c0 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c0 .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-area: input;
}

.c0 .{
  grid-area: messages;
}

.c0 > .c1 {
  grid-area: label;
  line-height: 1rem;
  padding-bottom: 0.25rem;
}

.c0 .sc-ciSmjq {
  grid-area: detail;
  justify-self: end;
  padding-left: 0.75rem;
}

.c0 .sc-gXfWUo {
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    htmlFor="FieldTextAreaID"
    id="FieldTextAreaID-labelledby"
  >
    👍
  </label>
  <div
    className="c3 c4"
  >
    <div
      className="c5 "
    >
      <textarea
        aria-describedby="FieldTextAreaID-describedby"
        id="FieldTextAreaID"
      />
    </div>
  </div>
  <div
    className=""
    id="FieldTextAreaID-describedby"
  />
</div>
`;

exports[`A FieldTextArea with label inline 1`] = `
.c5 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c5 .sc-iqAbSa {
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c5 textarea {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  min-height: 6.25rem;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  resize: vertical;
  width: 100%;
}

.c5 textarea:hover {
  border-color: #C1C6CC;
}

.c5 textarea:focus,
.c5 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c2 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 500;
}

.c4 {
  min-width: 0;
}

.c0 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  display: grid;
  grid-template-areas: "label input detail" ". messages messages";
  grid-template-columns: 150px 1fr;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c0 .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-area: input;
}

.c0 .{
  grid-area: messages;
}

.c0 > .c1 {
  grid-area: label;
  height: 36px;
  justify-self: end;
  line-height: 36px;
  padding-right: 0.75rem;
  text-align: right;
}

.c0 .sc-ciSmjq {
  grid-area: detail;
  justify-self: end;
  padding-left: 0.75rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0 .sc-gXfWUo {
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    htmlFor="FieldTextAreaID"
    id="FieldTextAreaID-labelledby"
  >
    👍
  </label>
  <div
    className="c3 c4"
  >
    <div
      className="c5 "
    >
      <textarea
        aria-describedby="FieldTextAreaID-describedby"
        id="FieldTextAreaID"
      />
    </div>
  </div>
  <div
    className=""
    id="FieldTextAreaID-describedby"
  />
</div>
`;
